Remove unused methods from completion test infrastructure
CompletionFixture: drop semanticContext, analysis, and public site(String)
— all three were only called by test classes deleted in the previous commit.
Their removal makes the private site(Cursor) helper dead as well, along with
the sentinelParser field. Inline compile() return type to AttributedFileAnalysis
to eliminate the CompilerResult exposure from the helper.

CompletionItemAssert: drop hasKind and hasFilterText — only used in the
deleted CompletionItemPresenterTest.

CompletionResultAssert: drop ordersBefore — only used in the deleted
CompletionEngineScenarioTest.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>